--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img></img>
     </div>
     
-    <article>Multiple lines of text. Multiple lines of text. <b> Multiple lines of text.</article>
+    <article>Multiple lines of text. Multiple lines of text. <br> Multiple lines of text.</article>
     
   </body>
   
