--- a/AboutMe.html
+++ b/AboutMe.html
@@ -2,9 +2,14 @@
 <html>
    <head>
      <meta charset="utf-8">
-     <title><b><h1>About Me</b></h1></title>
+     <title>About Me</title>
    </head>
    <body>
-     <p>This is my page</p>
+     <p><b><h1><center>About Me</center></h1></b>
+     <br>
+   text goes here text goes here text goes here text goes here text goes here 
+        
+        
+       </p>
    </body>
 </html>
