--- a/AboutMe.html
+++ b/AboutMe.html
@@ -5,9 +5,20 @@
      <title>About Me</title>
    </head>
    <body>
-     <p><b><h1><center>About Me</center></h1></b>
+     <p><b><h1><center><br><br>About Me</center></h1></b>
      <br>
-   text goes here text goes here text goes here text goes here text goes here 
+   <table>
+  <tr>
+   <th>header text</th>
+   <th>header text</th>
+   <th>header text</th>
+  </tr>
+  <tr>
+   <td>text in column</td>
+   <td>text in column</td>
+   <td>text in column</td>
+  </tr>
+ </table>
         
         
        </p>
