--- a/AboutMe.html
+++ b/AboutMe.html
@@ -5,21 +5,22 @@
      <title>About Me</title>
    </head>
    <body>
-     <p><b><h1><center><br><br>About Me</center></h1></b>
+     <p><b><h1><center><br>About Me</center></h1></b>
      <br>
+     <center></center>
    <table>
   <tr>
-   <th>header text</th>
-   <th>header text</th>
-   <th>header text</th>
+   <th>header text</th><br><br>
+   <th>header text</th><br><br>
+   <th>header text</th><br><br>
   </tr>
   <tr>
-   <td>text in column</td>
-   <td>text in column</td>
-   <td>text in column</td>
+   <td>text in column</td><br><br>
+   <td>text in column</td><br><br>
+   <td>text in column</td><br><br>
   </tr>
  </table>
-        
+   </center>
         
        </p>
    </body>
