--- a/AboutMe.html
+++ b/AboutMe.html
@@ -7,17 +7,17 @@
    <body>
      <p><b><h1><center><br>About Me</center></h1></b>
      <br>
-     <center></center>
+     <center>
    <table>
   <tr>
-   <th>header text</th><br><br>
-   <th>header text</th><br><br>
-   <th>header text</th><br><br>
+   <th>header text</th><br>
+   <th>header text</th><br>
+   <th>header text</th><br>
   </tr>
   <tr>
-   <td>text in column</td><br><br>
-   <td>text in column</td><br><br>
-   <td>text in column</td><br><br>
+   <td>text in column</td><br>
+   <td>text in column</td><br>
+   <td>text in column</td><br>
   </tr>
  </table>
    </center>
