--- a/AboutMe.html
+++ b/AboutMe.html
@@ -7,21 +7,10 @@
    <body>
      <p><b><h1><center><br>About Me</center></h1></b>
      <br>
-    
-   <table>
-      <center>
-  <tr>
-   <th>header text</th><br>
-   <th>header text</th><br>
-   <th>header text</th><br>
-  </tr>
-  <tr>
-   <td>text in column</td><br>
-   <td>text in column</td><br>
-   <td>text in column</td><br>
-  </tr>
-  </center>
- </table>
+    <center>Hi, my name's Breanna. I'm a junior at The New School studying Journalism + Contemporary
+   Music. I'm originally from Los Angeles and have lived in New York City for a year. I
+   enjoy producing electronic music and work part-time as a copywriter at Fevo.com, as well as a live-in dog nanny 
+   to four rescues. </center>
 
         
        </p>
