--- a/AboutMe.html
+++ b/AboutMe.html
@@ -8,8 +8,8 @@
      <p><b><h1><center><br>About Me</center></h1></b>
      <br>
     <center>Hi, my name's Breanna. I'm a junior at The New School studying Journalism + Contemporary
-   Music. I'm originally from Los Angeles and have lived in New York City for a year. I
-   enjoy producing electronic music and work part-time as a copywriter at Fevo.com, as well as a live-in dog nanny 
+   Music. <br>I'm originally from Los Angeles and have lived in New York City for a year.<br> I
+   enjoy producing electronic music and work part-time as a copywriter at Fevo.com,<br> as well as a live-in dog nanny 
    to four rescues. </center>
 
         
