--- a/AboutMe.html
+++ b/AboutMe.html
@@ -8,7 +8,17 @@
      <p><b><h1><center><br>About Me</center></h1></b>
      <br>
     <center>Hi, my name's Breanna. I'm a junior at The New School studying Journalism + Contemporary
-   Music. <br>I'm originally from Los Angeles and have lived in New York City for a year.<br> I
+   Music. <br>I'm originally from Los Angeles and have lived in New York City for a year.<br>
+   <br>
+   While I was in Los Angeles, I played bass/guitar in rock bands.
+   <a href="http://tinypic.com?ref=1h9daa" target="_blank"><img src="http://i67.tinypic.com/1h9daa.jpg" border="0" alt="Glam Skanks at Loaded"></a>
+   
+   
+   
+   
+   
+   
+   I
    enjoy producing electronic music and work part-time as a copywriter at Fevo.com,<br> as well as a live-in dog nanny 
    to four rescues. </center>
 
