--- a/AboutMe.html
+++ b/AboutMe.html
@@ -8,10 +8,11 @@
      <p><b><h1><center><br>About Me</center></h1></b>
      <br>
     <center>Hi, my name's Breanna. I'm a junior at The New School studying Journalism + Contemporary
-   Music. <br>I'm originally from Los Angeles and have lived in New York City for a year.<br>
-   <br>
-   While I was in Los Angeles, I played bass/guitar in rock bands.
-   <a href="http://tinypic.com?ref=1h9daa" target="_blank"><img src="http://i67.tinypic.com/1h9daa.jpg" border="0" alt="Glam Skanks at Loaded"></a>
+   Music. <br>I'm originally from Los Angeles and have lived in New York City for a year. Prior to moving to NYC
+   I played guitar/bass in rock bands.<br>Currently, my focus is on producing electronic music. I also work part-time for Fevo.com
+   and as a live-in dog nanny to four rescues.<br>
+  
+   <center><a href="http://tinypic.com?ref=1h9daa" target="_blank"><img src="http://i67.tinypic.com/1h9daa.jpg" border="0" alt="Glam Skanks at Loaded"></a></center>
    
    
    
