--- a/AboutMe.html
+++ b/AboutMe.html
@@ -10,18 +10,10 @@
     <center>Hi, my name's Breanna. I'm a junior at The New School studying Journalism + Contemporary
    Music. <br>I'm originally from Los Angeles and have lived in New York City for a year. Prior to moving to NYC
    I played guitar/bass in rock bands.<br>Currently, my focus is on producing electronic music. I also work part-time for Fevo.com
-   and as a live-in dog nanny to four rescues.<br>
+   and as a live-in dog nanny to four rescues.
   
-   <center><a href="http://tinypic.com?ref=1h9daa" target="_blank"><img src="http://i67.tinypic.com/1h9daa.jpg" border="0" alt="Glam Skanks at Loaded"></a></center>
+   <center><img src="http://i67.tinypic.com/1h9daa.jpg" border="0" alt="Glam Skanks at Loaded"></center>
    
-   
-   
-   
-   
-   
-   I
-   enjoy producing electronic music and work part-time as a copywriter at Fevo.com,<br> as well as a live-in dog nanny 
-   to four rescues. </center>
 
         
        </p>
