--- a/AboutMe.html
+++ b/AboutMe.html
@@ -9,9 +9,9 @@
      <br>
     <center>Hi, my name's Breanna. I'm a junior at The New School studying Journalism + Contemporary
    Music. <br>I'm originally from Los Angeles and have lived in New York City for a year. Prior to moving to NYC
-   I played guitar/bass in rock bands.<br>Currently, my focus is on producing electronic music. I also work part-time for Fevo.com
+   I played guitar/bass in rock bands.<br>Currently, my focus is on producing electronic music. I also work part-time for <a href="http://www.fevo.com">Fevo.com</a>
    and as a live-in dog nanny to four rescues.
-  
+  <br>
    <center><img src="http://i67.tinypic.com/1h9daa.jpg" border="0" alt="Glam Skanks at Loaded"></center>
    
 
