--- a/AboutMe.html
+++ b/AboutMe.html
@@ -2,11 +2,11 @@
 <html>
    <head>
      <meta charset="utf-8">
-     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-     <title><center>Who is Breanna Fields?</center></title>
+     <title>About Me</title>
    </head>
    <body>
-    <h1></h1>
+      <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <h1><center>Who is Breanna Fields?</center></h1>
     
     <h2><center>A short autobiography</center></h2>
     
