--- a/AboutMe.html
+++ b/AboutMe.html
@@ -2,7 +2,7 @@
 <html>
    <head>
      <meta charset="utf-8">
-     <link rel="stylesheet" type="text/css" href="_layouts/styles.css"/>
+     <link rel="stylesheet" type="text/css" href="CSS.html"/>
      <title>About Me</title>
    </head>
    <body>
