--- a/AboutMe.html
+++ b/AboutMe.html
@@ -2,8 +2,8 @@
 <html>
    <head>
      <meta charset="utf-8">
-     <link rel="stylesheet" type="css" href="/css/style.css"/>
      <title>About Me</title>
+     <link rel="stylesheet" href="css/styles.css">
    </head>
    <body>
   
