--- a/AboutMe.html
+++ b/AboutMe.html
@@ -11,7 +11,7 @@
     <h2><center>A short autobiography</center></h2>
     
     <h3>In The Now</h3>
-    <div style="position: absolute; top: 10px; left: 10px; ">
+    <div style="position: relative; top: 10px; left: 10px; ">
     "Suddenly, in the middle of a page, he heard it.
      
         No sounds of footsteps, no people chattering, no radios, no bamboo, no kotos being tuned.
