--- a/AboutMe.html
+++ b/AboutMe.html
@@ -11,12 +11,14 @@
     <h2><center>A short autobiography</center></h2>
     
     <h3>In The Now</h3>
-    <div style="position: relative; center: 30px; right: 20px;">
+    <div style="position: relative; center: 30px; right: 100px;">
     "Suddenly, in the middle of a page, he heard it.
      <br>
         No sounds of footsteps, no people chattering, no radios, no bamboo, no kotos being tuned.
      <br>
-        In that short moment, Yoshio couldn’t even hear the sound of his own breath. Everything felt still inside him. Peaceful, like the garden after it snowed. Like feather-stuffed futons drying in the sun.
+        In that short moment, Yoshio couldn’t even hear the sound of his own breath. 
+        <br>
+        Everything felt still inside him. Peaceful, like the garden after it snowed. Like feather-stuffed futons drying in the sun.
         <br>
         Silence had been there all along."
         
