--- a/AboutMe.html
+++ b/AboutMe.html
@@ -24,9 +24,9 @@
         Like feather-stuffed futons drying in the sun.
         <br>
         Silence had been there all along."
-        
+        </div>
 
-
+<div style="position: absolute; left: 800px; center: 150px;">
     <h3>November 2016 - Present</h3>
     
     </div>
