--- a/AboutMe.html
+++ b/AboutMe.html
@@ -26,7 +26,7 @@
         Silence had been there all along."
         </div>
 
-<div style="position: relative; left: 800px; bottom: 5px;">
+<div style="position: absolute; left: 800px; bottom: 5px;">
     <h3>November 2016 - Present</h3>
     
     </div>
