--- a/CraigslistExercise.html
+++ b/CraigslistExercise.html
@@ -6,9 +6,9 @@
    </head>
    <body>
    
-   <h1><center>Heritage Books - $4 (Bensonhurst)</center></h1>
+   <h2><center>Heritage Books - $4 (Bensonhurst)</center></h2>
    <br><br>
-   <img src="https://images.craigslist.org/00h0h_9U1QfoCSxO1_600x450.jpg">
+   <center><img src="https://images.craigslist.org/00h0h_9U1QfoCSxO1_600x450.jpg"></center>
    
    <br><br>
    <ul>
@@ -17,6 +17,8 @@
     <li><a href="https://www.craigslist.org/about/recalled_items">product recalls</a></li>
     <li><a href="https://www.craigslist.org/about/scams">avoiding scams</a></li>
    </ul>
+   
+   
    
    
    
