--- a/CraigslistExercise.html
+++ b/CraigslistExercise.html
@@ -18,6 +18,12 @@
     <li><a href="https://www.craigslist.org/about/scams">avoiding scams</a></li>
    </ul>
    
+   <br>
+   
+I have 300+/- Heritage Books in very good to ok condition. $4.00each. Perfect opportunity to create a library of bound classics in one purchase. 40 years<br> of collecting. Have to move. Will make a deal to take all.
+<br>
+<ol>do NOT contact me with unsolicited services or offers</ol>
+   
    
    
    
