--- a/CraigslistExercise.html
+++ b/CraigslistExercise.html
@@ -11,10 +11,11 @@
    <center><img src="https://images.craigslist.org/00h0h_9U1QfoCSxO1_600x450.jpg"></center>
    
    <br>
-   
+  <center>
 I have 300+/- Heritage Books in very good to ok condition. $4.00each. Perfect opportunity to create a library of bound classics in one purchase. 40 years<br> of collecting. Have to move. Will make a deal to take all.
+</center>
 <br>
-<ol>do NOT contact me with unsolicited services or offers</ol>
+<ol><center>do NOT contact me with unsolicited services or offers</center></ol>
    
 <br>
    <ul>
