--- a/CraigslistExercise.html
+++ b/CraigslistExercise.html
@@ -15,7 +15,8 @@
 I have 300+/- Heritage Books in very good to ok condition. $4.00each. Perfect opportunity to create a library of bound classics in one purchase. 40 years<br> of collecting. Have to move. Will make a deal to take all.
 </center>
 <br>
-<ol><center>do NOT contact me with unsolicited services or offers</center></ol>
+
+<ul style="list-style-type:circle"><center>do NOT contact me with unsolicited services or offers</center></ul>
    
 <br>
    <ul>
